# dbt-lint-yaml

./: .gitignore  AGENTS.md  Cargo.toml  README.md  default-dbt-lint.toml  install.ps1  install.sh  pipedream.md  pyproject.toml  still_to_go
.github/workflows/: release.yml  rust.yml
benches/: my_benchmark.rs
docs/: configuration.md  default-dbt-lint.toml
docs/rules/: dead_model.md  direct_join_to_source.md  duplicate_sources.md  exposure_dependent_on_private_model.md  exposure_parents_materializations.md  index.md  missing_column_descriptions.md  missing_model_descriptions.md  missing_model_tags.md  missing_primary_key.md  missing_properties_file.md  missing_required_tests.md  missing_source_column_descriptions.md  missing_source_descriptions.md  missing_source_freshness.md  missing_source_table_descriptions.md  model_fanout.md  model_properties_layout.md  models_separate_from_properties_file.md  multiple_sources_joined.md  public_models_without_contract.md  rejoining_of_upstream_concepts.md  root_models.md  source_fanout.md  unused_sources.md
scripts/: ruamel_model_changes.py  ruamel_normalize_layout.py
src/: change_descriptors.rs  check.rs  config.rs  graph.rs  lib.rs  main.rs  osmosis.rs  project.rs  writeback.rs
src/check/: columns.rs  common.rs  docs.rs  exposures.rs  mod.rs  models.rs  sources.rs
src/codegen/: mod.rs
src/writeback/: changes.rs  doc.rs  mod.rs  properties.rs  python.rs  rust.rs
tests/: docker-compose.yml  integration_jaffle_shop.rs
tests/jaffle_shop/: dbt-lint.toml  profiles.yml.notyet
tests/jaffle_shop/models/marts/: _exposures.yml  order_items.yml  products.yml
tests/jaffle_shop/models/staging/: __sources.yml  docs_blocks.md  stg_order_items.yml
tests/jaffle_shop/seeds/: _seeds.yml
tests/jaffle_shop/snapshots/: orders_snapshot.yml
