[package]
name = "dbt-lint-yaml"
version = "0.3.1"
edition = "2024"
authors = ["Vince Faller <vdfaller@gmail.com>"]
description = "A linter for dbt YAML files"
default-run = "dbt-lint-yaml"

[features]
default = []
write-default-config = []

[dependencies]
dbt-schemas = { package = "dbt-schemas", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-dag = { package = "dbt-dag", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-common = { package = "dbt-common", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-jinja-utils = { package = "dbt-jinja-utils", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-loader = { package = "dbt-loader", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-parser = { package = "dbt-parser", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-sa-cli = { package = "dbt-sa-cli", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
minijinja = { package = "minijinja", git = "https://github.com/dbt-labs/dbt-fusion", rev = "f8dda7da5d4c9c7f845613c9aebcbf1f523c0360" }
dbt-serde_yaml = { git = "https://github.com/sdf-labs/dbt-serde-yaml", rev = "9ccae3e49f77fcd0a92230a1e41c51d74279409f", features = [
  "filename",
  "schemars",
  "flatten_dunder",
] }
tokio = { version = "1.41.1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }

serde_json = "1.0.133"
serde_with = "3.12.0"

clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = "1.0"
toml = "0.9.7"
strsim = "0.11"
struct-field-names-as-array = "0.3.0"
strum = { version = "0.27.2", features = ["derive"] }
arrow = { version = "=55.1.0", features = ["prettyprint"] }
arrow-array = { version = "=55.1.0" }
arrow-buffer = { version = "=55.1.0" }
arrow-csv = { version = "=55.1.0" }
arrow-data = { version = "=55.1.0" }
arrow-ipc = { version = "=55.1.0" }
arrow-json = { version = "=55.1.0" }
arrow-schema = { version = "=55.1.0", features = ["serde"] }
parquet = { version = "=55.1.0" }
serde_arrow = { version = "0.13.4", features = ["arrow-55"] }
base64 = "0.21"

[[bin]]
name = "write-default-config"
path = "src/bin/write-default-config.rs"
required-features = ["write-default-config"]

[dev-dependencies]
tempfile = "3.6"

[package.metadata.release]
allow-branch = ["main"]
tag-name = "v{{version}}"
publish = false
push = true
push-remote = "origin"
sign-tag = true
sign-commit = true

