[package]
name = "dbt-lint-yaml"
version = "0.3.1"
edition = "2024"
authors = ["Vince Faller <vdfaller@gmail.com>"]
description = "A linter for dbt YAML files"
default-run = "dbt-lint-yaml"

[features]
default = []
write-default-config = []

[dependencies]
# non fusion packages/dependencies
strsim = "0.11"
struct-field-names-as-array = "0.3.0"

# fusion packages
dbt-schemas = { package = "dbt-schemas", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-dag = { package = "dbt-dag", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-common = { package = "dbt-common", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-jinja-utils = { package = "dbt-jinja-utils", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-loader = { package = "dbt-loader", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-parser = { package = "dbt-parser", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-sa-cli = { package = "dbt-sa-cli", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
minijinja = { package = "minijinja", git = "https://github.com/dbt-labs/dbt-fusion", rev = "33b0e0d5b85b21691f7e06bd7138d801bf4119f7" }
dbt-serde_yaml = { git = "https://github.com/sdf-labs/dbt-serde-yaml", rev = "9ccae3e49f77fcd0a92230a1e41c51d74279409f", features = [
  "filename",
  "schemars",
  "flatten_dunder",
] }

# Fusion dependencies, keeping them as open as possible
tokio = "~1"
serde_json = "~1"
serde_with = "~3"
clap = "~4"
serde = "~1"
thiserror = "~1"
toml = "~0.9"
strum = "~0.27"
parquet = { git = "https://github.com/sdf-labs/arrow-rs", package = "parquet", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }

[patch.crates-io]

# Map Arrow-family crates to the sdf-labs/arrow-rs fork used by dbt-fusion @ 33b0e0d5
arrow = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-array = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-arith = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-buffer = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-cast = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-csv = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-data = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-ipc = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-json = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-ord = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-row = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-schema = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-select = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
arrow-string = { git = "https://github.com/sdf-labs/arrow-rs", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
parquet = { git = "https://github.com/sdf-labs/arrow-rs", package = "parquet", rev = "e4924d7d6d07bb12ba6628e595f9f58c2c02c9a1" }
 

[[bin]]
name = "write-default-config"
path = "src/bin/write-default-config.rs"
required-features = ["write-default-config"]

[dev-dependencies]
tempfile = "3.6"

[package.metadata.release]
allow-branch = ["main"]
tag-name = "v{{version}}"
publish = false
push = true
push-remote = "origin"
sign-tag = true
sign-commit = true
